Keep text area active after keypress and click. Adapt .text-output:focus styling to avoid flickering border before refocus. Closes #2

--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,6 @@ h1 span.arabic {
 
 .text-output:focus {
     outline: none;
-    border-color: #3e3668;
 }
 
 .text-output::placeholder {
